--- a/source/form.html
+++ b/source/form.html
@@ -49,31 +49,31 @@
           <label class="testimonial-form__label testimonial-form__label--name" for="patronymic">Отчество:</label>
           <input type="text" name="patronymic" placeholder="Александрович" id="patronymic">
         </fieldset>
-        <fieldset class="testimonial-form__group">
+        <fieldset class="testimonial-form__group testimonial-form__group--contacts">
           <legend class="testimonial-form__legend">Контактная информация:</legend>
           <label class="testimonial-form__label testimonial-form__label--contacts" for="user-phone">Контактный телефон<sup>*</sup>:</label>
           <input type="tel" name="user-phone" placeholder="Введите телефон" id="user-phone" required>
           <label class="testimonial-form__label testimonial-form__label--contacts" for="user-email">Электронная почта<sup>*</sup>:</label>
           <input type="email" name="user-email" placeholder="Введите e-mail" id="user-email" required>
         </fieldset>
-        <fieldset class="testimonial-form__group">
+        <fieldset class="testimonial-form__group testimonial-form__group--radio">
           <legend class="testimonial-form__legend">Ваше общее впечатление:</legend>
-          <input type="radio" name="filling" value="positive" id="radio-positive" checked>
+          <input class="visually-hidden" type="radio" name="filling" value="positive" id="radio-positive" checked>
           <label class="testimonial-form__label testimonial-form__label--radio" for="radio-positive">Скорее положительное</label>
-          <input type="radio" name="filling" value="negative" id="radio-negative">
+          <input class="visually-hidden" type="radio" name="filling" value="negative" id="radio-negative">
           <label class="testimonial-form__label testimonial-form__label--radio" for="radio-negative">Скорее отрицательное</label>
-          <input type="radio" name="filling" value="no-answer" id="radio-no-answer">
+          <input class="visually-hidden" type="radio" name="filling" value="no-answer" id="radio-no-answer">
           <label class="testimonial-form__label testimonial-form__label--radio" for="radio-no-answer">Затрудняюсь ответить</label>
         </fieldset>
-        <fieldset class="testimonial-form__group">
+        <fieldset class="testimonial-form__group testimonial-form__group--checkbox">
           <legend class="testimonial-form__legend">Посещенные достопримечательности:</legend>
-          <input type="checkbox" name="attractions" value="bridge" id="checkbox-bridge" checked>
+          <input class="visually-hidden" type="checkbox" name="attractions" value="bridge" id="checkbox-bridge" checked>
           <label class="testimonial-form__label testimonial-form__label--checkbox" for="checkbox-bridge">Мост Дьявола</label>
-          <input type="checkbox" name="attractions" value="park" id="checkbox-park" checked>
+          <input class="visually-hidden" type="checkbox" name="attractions" value="park" id="checkbox-park" checked>
           <label class="testimonial-form__label testimonial-form__label--checkbox" for="checkbox-park">Слайд-парк</label>
-          <input type="checkbox" name="attractions" value="mountain" id="checkbox-mountain">
+          <input class="visually-hidden" type="checkbox" name="attractions" value="mountain" id="checkbox-mountain">
           <label class="testimonial-form__label testimonial-form__label--checkbox" for="checkbox-mountain">Гора-Колокол</label>
-          <input type="checkbox" name="attractions" value="red-rocks" id="checkbox-red-rocks" checked>
+          <input class="visually-hidden" type="checkbox" name="attractions" value="red-rocks" id="checkbox-red-rocks" checked>
           <label class="testimonial-form__label testimonial-form__label--checkbox" for="checkbox-red-rocks">Красные скалы</label>
         </fieldset>
         <fieldset class="testimonial-form__group">
