--- a/source/form.html
+++ b/source/form.html
@@ -34,7 +34,7 @@
         <img class="page-header__slogan" src="img/text-sedona.svg" width="229" height="39" alt="Sedona">
       </figure>
     </header>
-    <main class="page-main page-main--inner">
+    <main class="page-main page-main--form">
       <div class="lead page-main__lead page-main__lead--testimonial">
         <h1 class="lead__caption">Оставьте свой отзыв</h1>
         <p class="lead__text">Помогите нашим отелям стать лучше! оставьте отзыв о них, а также о посещенных вами достопримечательностях</p>
@@ -70,15 +70,15 @@
           </div>
         </fieldset>
         <fieldset class="testimonial-form__group testimonial-form__group--checkbox">
-          <legend class="testimonial-form__legend">Посещенные достопримечательности:</legend>
+          <legend class="testimonial-form__legend testimonial-form__legend--checkbox">Посещенные <br>достопримечательности:</legend>
           <div class="testimonial-form__flex-wrap testimonial-form__flex-wrap--row">
-            <input class="visually-hidden testimonial-form__input--checkbox" type="checkbox" name="attractions" value="bridge" id="checkbox-bridge" checked>
+            <input class="visually-hidden testimonial-form__input--checkbox" type="checkbox" name="bridge" value="bridge" id="checkbox-bridge" checked>
             <label class="testimonial-form__label testimonial-form__label--checkbox" for="checkbox-bridge">Мост Дьявола</label>
-            <input class="visually-hidden testimonial-form__input--checkbox" type="checkbox" name="attractions" value="park" id="checkbox-park" checked>
+            <input class="visually-hidden testimonial-form__input--checkbox" type="checkbox" name="park" value="park" id="checkbox-park" checked>
             <label class="testimonial-form__label testimonial-form__label--checkbox" for="checkbox-park">Слайд-парк</label>
-            <input class="visually-hidden testimonial-form__input--checkbox" type="checkbox" name="attractions" value="mountain" id="checkbox-mountain">
+            <input class="visually-hidden testimonial-form__input--checkbox" type="checkbox" name="mountain" value="mountain" id="checkbox-mountain">
             <label class="testimonial-form__label testimonial-form__label--checkbox" for="checkbox-mountain">Гора-Колокол</label>
-            <input class="visually-hidden testimonial-form__input--checkbox" type="checkbox" name="attractions" value="red-rocks" id="checkbox-red-rocks" checked>
+            <input class="visually-hidden testimonial-form__input--checkbox" type="checkbox" name="red-rocks" value="red-rocks" id="checkbox-red-rocks" checked>
             <label class="testimonial-form__label testimonial-form__label--checkbox" for="checkbox-red-rocks">Красные скалы</label>
           </div>
         </fieldset>
