--- a/source/index.html
+++ b/source/index.html
@@ -6,8 +6,8 @@
     <title>HTML Academy: Седона</title>
     <link rel="preload" href="fonts/ptsans.woff2" as="font">
     <link rel="preload" href="fonts/ptsansbold.woff2" as="font">
-    <link rel="stylesheet" href="css/normalize.min.css">
-    <link rel="stylesheet" href="css/style.min.css">
+    <!-- <link rel="stylesheet" href="https://yarnpkg.com/en/package/normalize.css"> -->
+    <link rel="stylesheet" href="css/style.css">
     <script>
       // Picture element HTML5 shiv
       document.createElement( "picture" );
