--- a/source/form.html
+++ b/source/form.html
@@ -49,7 +49,7 @@
         <img class="page-header__slogan" src="img/text-sedona.svg" width="229" height="39" alt="Sedona">
       </figure>
     </header>
-    <main class="page-main page-main--form">
+    <main class="page-main">
       <div class="lead page-main__lead page-main__lead--testimonial">
         <h1 class="lead__caption">Оставьте свой отзыв</h1>
         <p class="lead__text">Помогите нашим отелям стать лучше! оставьте отзыв о них, а также о посещенных вами достопримечательностях</p>
