--- a/source/index.html
+++ b/source/index.html
@@ -73,9 +73,9 @@
         </div>
         <div class="advanteges__item advanteges__item--photo">
           <div class="advanteges__wrap">
-            <h3 class="advanteges__heading">Там есть Мост дьявола</h3>
+            <h3 class="advanteges__heading advanteges__heading--transform">Там есть <br>Мост дьявола</h3>
             <span class="advanteges__number">№ 2</span>
-            <p class="advanteges__text">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+            <p class="advanteges__text advanteges__text--transform-desk">Да, по нему можно пройти! <br>Если вы осмелитесь, конечно</p>
           </div>
           <div class="advanteges__photo-wrap">
             <picture>
@@ -117,7 +117,7 @@
             </li>
             <li class="recommendations__item recommendations__item--souvenirs">
               <h3 class="recommendations__heading">Сувениры</h3>
-              <p class="recommendations__text">Не только китайского, но и местного производства!</p>
+              <p class="recommendations__text recommendations__text--transform">Не только китайского, <br>но и местного производства!</p>
             </li>
             <li class="recommendations__item recommendations__item--food">
               <h3 class="recommendations__heading">Еда</h3>
