--- a/source/photo.html
+++ b/source/photo.html
@@ -49,10 +49,10 @@
         <img class="page-header__slogan" src="img/text-sedona.svg" width="229" height="39" alt="Sedona">
       </figure>
     </header>
-    <main class="page-main page-main--inner">
+    <main class="page-main">
       <div class="lead page-main__lead">
         <h1 class="lead__caption">Фото и видео</h1>
-        <p class="lead__text">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
+        <p class="lead__text--transform-tab">Не можете решиться на путешествие из-за курса? <br>Фотографии помогут вам забыть о политике и экономике.</p>
       </div>
       <section class="gallery">
         <ul class="gallery__list">
@@ -146,7 +146,7 @@
           </li>
         </ul>
       </section>
-      <section class="video">
+      <section class="video page-main__video">
         <div class="video__lead lead">
           <b class="lead__caption">Все еще сомневаетесь?</b>
           <p class="lead__text">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
